# war_rig

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CUSTOM_LLM_PROVIDER.md  README.md  pyproject.toml  war_rig_kg_spec.docx  war_rig_spec_v3.md
.beads/: daemon-error  discovery_workflow_tickets.jsonl  discovery_workflow_tickets.md  imperator_feedback_tickets.md  issues.jsonl  metadata.json  sync_base.jsonl
.beads/backup/: backup_state.json
.github/workflows/: claude-issue-worker.yml
citadel/: .gitignore  README.md  citadel-initial-spec.md  pyproject.toml
citadel/example_output/: DEPENDENCY_DIAGRAM.md  DEPENDENCY_DIAGRAM.mmd  SEQUENCE_DIAGRAMS.md  dependency_graph.json
citadel/proleap-wrapper/: build-jar.sh  dependency-reduced-pom.xml  pom.xml
citadel/proleap-wrapper/src/main/java/citadel/proleap/: JsonAstSerializer.java  ProLeapWrapper.java
citadel/specs/builtin/: .gitkeep  bms.yaml  cobol.yaml  copybook.yaml  datacard.yaml  db2_ddl.yaml  jcl.yaml  python.yaml
citadel/src/citadel/: __init__.py  cli.py  config.py  orchestrator.py  sdk.py
citadel/src/citadel/analysis/: __init__.py  dead_code.py  flow_diagram.py  sequence_finder.py
citadel/src/citadel/cobol/: __init__.py  bridge.py  call_graph.py  data_division.py  procedure_division.py  proleap_bridge.py  proleap_preprocessor.py  source_reader.py  syntax_tree.py
citadel/src/citadel/discovery/: __init__.py  file_walker.py
citadel/src/citadel/doof_wagon/: __init__.py  watcher.py
citadel/src/citadel/doof_wagon/schemas/: citadel_query.schema.v1.json
citadel/src/citadel/graph/: __init__.py  builder.py  exporters.py  model.py
citadel/src/citadel/llm/: __init__.py
citadel/src/citadel/parser/: __init__.py  engine.py  preprocessor.py
citadel/src/citadel/resolver/: __init__.py  alias_resolver.py  cross_reference.py  registry.py
citadel/src/citadel/specs/: __init__.py  manager.py  schema.py
citadel/tests/: __init__.py  conftest.py  test_cobol_parser.py  test_cross_reference.py  test_dead_code.py  test_dead_code_ast.py  test_doof_wagon_watcher.py  test_flow_diagram.py  test_get_callers.py  test_get_file_stats.py  test_get_function_bodies.py  test_get_function_body.py  test_get_functions_line_end.py  test_get_sequence_diagrams.py  test_graph_builder.py  test_markdown_summary.py  test_proleap_bridge.py  test_proleap_carddemo.py  test_proleap_preprocessor.py  test_sequence_finder.py  test_source_reader_ci.py  test_tiered_methods.py
cobalt/: pyproject.toml
cobalt/src/cobalt/: __init__.py  cli.py  generator.py
cobalt/tests/: test_generator.py  test_regression.py
codewhisper/: ARCHITECTURE.md  CITADEL_INTEGRATION_PLAN.md  PLAN.md  README.md  pyproject.toml
codewhisper/docs/: skill-generator.md
codewhisper/src/codewhisper/: __init__.py  cli.py  config.py  sdk.py
codewhisper/src/codewhisper/agent/: __init__.py  citadel_tools.py  graph.py  langchain_factory.py  message.py  minion.py  protocol.py  react_loop.py  state.py  tools.py
codewhisper/src/codewhisper/agent/tools/: __init__.py  citadel.py  code.py  knowledge.py  registry.py
codewhisper/src/codewhisper/core/: __init__.py  message.py  react_loop.py  tool_protocol.py
codewhisper/src/codewhisper/minion/: __init__.py  processor.py
codewhisper/src/codewhisper/search/: __init__.py  code_search.py
codewhisper/src/codewhisper/skills/: __init__.py  generator.py  index.py  loader.py
codewhisper/src/codewhisper/tools/: __init__.py  citadel.py  code.py  factory.py  knowledge.py  registry.py
codewhisper/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_sdk.py
codewhisper/tests/integration/: __init__.py  test_carddemo_integration.py  test_citadel_integration.py  test_sdk_regression.py
codewhisper/tests/test_agent/: __init__.py  test_citadel_tools.py  test_graph.py  test_langchain_factory.py  test_message.py  test_minion.py  test_protocol.py  test_registry.py  test_state.py  test_tools.py
codewhisper/tests/test_core/: __init__.py  test_message.py  test_react_loop.py  test_tool_protocol.py
codewhisper/tests/test_search/: __init__.py  test_code_search.py
codewhisper/tests/test_skills/: __init__.py  test_generator.py  test_index.py  test_loader.py
codewhisper/tests/test_tools/: test_registry.py
docs/: ANALYSIS_PATTERNS_AGENT_DESIGN.md  beads_integration.md  paragraph_splitter.md  program_manager_architecture.md
docs/architecture/: CHUNKING_DESIGN.md  SCRIBE_TOKEN_HANDLING_DESIGN.md  atlas_embedding.md  error_recovery.md
example_output/: .war_rig_tickets.json  CALL_GRAPH.md  README.md  SYSTEM_DESIGN.md  SYSTEM_OVERVIEW.md  dependency_graph.json  knowledge_graph.db  war_rig.err
example_output/CardDemo System/: SYSTEM_OVERVIEW.md
example_output/bms/: COPAU00.bms.doc.json  COPAU00.bms.doc.json.bak  COPAU00.bms.md  COPAU00.doc.json  COPAU00.md  COPAU01.bms.doc.json  COPAU01.bms.doc.json.bak  COPAU01.bms.md  COPAU01.doc.json.bak  COPAU01.md
example_output/cbl/: CBPAUP0C.cbl.ast  CBPAUP0C.cbl.doc.json  CBPAUP0C.cbl.doc.json.bak  CBPAUP0C.cbl.md  CBPAUP0C.doc.json  CBPAUP0C.md  COPAUA0C.cbl.ast  COPAUA0C.cbl.doc.json  (+40 more)
example_skills_output/: SKILL.md
llm-providers/: ARCHITECTURE.md  README.md  pyproject.toml
llm-providers/src/llm_providers/: __init__.py  config.py  factory.py  protocol.py
llm-providers/src/llm_providers/providers/: __init__.py  anthropic.py  openai.py  openrouter.py
llm-providers/tests/: __init__.py  conftest.py  test_config.py  test_factory.py  test_protocol.py
llm-providers/tests/test_providers/: __init__.py  test_anthropic.py  test_openai.py  test_openrouter.py
scripts/: README.md  fix_stub_paragraphs.py  generate_call_graph.py  generate_skills.py  generate_summary.py  human_feedback.py  init_beads_tracking.sh  kill_workers.sh  redoc_paragraphs.py  regenerate_markdown.py  run_carddemo.py  setup.sh  test_chunking.py  ticket_manager.py  validate_cobol_analysis_patterns.py  war_rig_arcade.html  war_rig_arcade.py  war_rig_status.py
skills-output/: SKILL.md
tests/: __init__.py  conftest.py  test_doof_wagon_bridge.py
war_rig/: __init__.py  __main__.py  beads.py  cli.py  config.py
(+1153 files in other folders)
