[project]
name = "cobalt"
version = "0.1.0"
description = "Pure-Python COBOL AST generator"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Andras Lferenczi" }
]

dependencies = [
    "citadel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
cobalt = "cobalt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cobalt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cobalt", "citadel"]
